# roAp-oscilation-analysis

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  conftest.py  environment.yml  plan.md  requirements.txt  setup.cfg
docs/: METHODS.md
main/: Borrador_Ensenada_2024.ipynb  analysis_utils.py  main.ipynb
notebooks/: 01_main_analysis.py  main.ipynb
scripts/: download_lightcurves.py
src/roap_analysis/: __init__.py  config.py  frequency_analysis.py  plotting.py  stellar_params.py
tests/: test_frequency_analysis.py
