[metadata]
name = roap-analysis
version = 1.0.0
author = Jose Angel
author_email = jose.angel@email.com
description = Professional asteroseismic analysis of rapidly oscillating Ap stars
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/roap-analysis
project_urls =
    Bug Tracker = https://github.com/yourusername/roap-analysis/issues
    Documentation = https://github.com/yourusername/roap-analysis/wiki
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.21
    pandas>=1.3
    scipy>=1.7
    matplotlib>=3.4
    lightkurve>=2.0
    astropy>=5.0
    astroquery>=0.4.6

[options.packages.find]
where = src
